--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  provider: ^6.0.3
+  hive: ^2.2.3
+  path_provider: ^2.0.11
+  hive_flutter: ^1.1.0
+  connectivity_plus: ^2.3.6
+  google_fonts: ^3.0.1
+  http: ^0.13.5
+  flutter_slidable: ^2.0.0
+  getwidget: ^3.0.1
+  flutter_svg: ^1.1.5
+  percent_indicator: ^4.2.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -58,10 +69,25 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/car.png
+    - assets/images/car2.png
+    - assets/images/motorcycle.png
+    - assets/images/logo.png
+    - assets/images/parkdevice.png
+    - assets/images/vector1.png
+    - assets/images/vector2.png
+    - assets/images/vector3.png
+    - assets/images/combine.png
+    - assets/images/combine2.png
+    - assets/images/orang.png
+    - assets/images/logo2.png
+    - assets/images/mapsdefault.png
+    - assets/images/car_mini.png
+    - assets/images/motorcycle_mini.png 
+    - assets/images/car_mini.svg
+    - assets/images/motorcycle_mini.svg
+    - assets/images/gracak.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
